test_files/text_sample_cp437.txt

BEOWULF.




I.

THE LIFE AND DEATH OF SCYLD.


{The famous race of Spear-Danes.}

          Lo! the Spear-Danes' glory through splendid achievements
          The folk-kings' former fame we have heard of,
          How princes displayed then their prowess-in-battle.

{Scyld, their mighty king, in honor of whom they are often called
Scyldings. He is the great-grandfather of Hrothgar, so prominent in the
poem.}

          Oft Scyld the Scefing from scathers in numbers
        5 From many a people their mead-benches tore.
          Since first he found him friendless and wretched,
          The earl had had terror: comfort he got for it,
          Waxed 'neath the welkin, world-honor gained,
          Till all his neighbors o'er sea were compelled to
       10 Bow to his bidding and bring him their tribute:
          An excellent atheling! After was borne him

{A son is born to him, who receives the name of Beowulf--a name afterwards
made so famous by the hero of the poem.}


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Source for the following text: http://www.heorot.dk/beowulf-rede-text.html

Listen! We --of the Spear-Danes      in the days of yore,
of those clan-kings--      heard of their glory.
how those nobles      performed courageous deeds.

Hw‘t! W‚ G rdena      in g‚ardagum
‚odcyninga      rym gefr£nonú
h£   ‘elingas      ellen fremedon.

------------------------------------------------------------------------------

Oft Scyld Sc‚fing      sceaena r‚atum	
Often Scyld, Scef's son,      from enemy hosts
monegum ma‚gum      meodosetla oft‚ahú	
from many peoples      seized mead-benches;
egsode Eorle      syan a‚rest wear	
and terrorised the fearsome Heruli      after first he was
f‚asceaft funden      h‚ ‘s fr¢fre geb dú	
found helpless and destitute,      he then knew recompense for that:-
w‚ox under wolcnumú      weormyndum  h	
he waxed under the clouds,      throve in honours,
o ‘t him a‚ghwylc       ra ymbsittendra	
until to him each      of the bordering tribes
ofer hronr de      hran scolde,	
beyond the whale-road      had to submit,
gomban gyldanú      ‘t w‘s g¢d cyning.	
and yield tribute:-      that was a good king!
